icons fixed to align with the label while sizing is changing

--- a/src/qsSimpleKPI.less
+++ b/src/qsSimpleKPI.less
@@ -73,7 +73,24 @@
   .ui.segments, .ui.segment {
     background-color: transparent !important;
   }
-
+  .value--icon--wrapper{
+    display: inline-block;
+    position: relative;
+    margin-right: 10px;
+    top: -2px;
+    &.mini, &.tiny{
+      top: -4px;
+    } 
+    &.small{
+      top: -3px;
+    }
+    &.large{
+      top: 0;
+    }
+    &.huge{
+      top: 3px;
+    }
+  }
   .ui.statistics .statistic > .value,
   .ui.statistic > .value {
     text-transform: none;
